# ronin

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEVLOG.md  README.md  eslint.config.js  filepath.md  knowledge.md  package-lock.json  package.json  testg.toml  vite.config.ts  vitest.config.ts
.bmad/_cfg/: files-manifest.csv  manifest.yaml
.bmad/bmm/: config.yaml
.bmad/core/: config.yaml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
_bmad-output/excalidraw-diagrams/: ronin-system-architecture.excalidraw  theme.json
_bmad/_bmad/: config.yaml
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
docs/: PHILOSOPHY.md  architecture.md  bmm-workflow-status.yaml  code-review.md  epics.md  implementation-readiness-report-2025-12-22.md  implementation-readiness-report-epic-4.5-2025-12-22.md  project-context.md  project_context.md  retro-1-full.md  sprint-change-proposal-2025-12-23.md  ux-design-specification.md
docs/archive/: devlog-conflict-ui-spec-2025-12-21.md  tech-spec-epic3-preparation-sprint.md  validation-report-2025-12-21-devlog-analysis.md  validation-report-20251220-140839.md  validation-report-3-1-20251220.md  validation-report-3-4-2025-12-20_20-26-41.md  validation-report-3-5.md  validation-report-4-1-2025-12-21.md  validation-report-5-1.md  validation-report-5-6.md
docs/openrouterdocs/: message-transforms.md  model-fallbacks.md  presets.md  toc.md  zero-completion-insurance.md
docs/plans/: 2026-02-22-openrouter-model-selection-and-search.md  2026-02-25-debounce-model-search.md  2026-03-01-plan-a-serverless-security-hardening.md  2026-03-01-plan-b-store-and-hook-correctness.md  2026-03-01-plan-c-ui-and-clean-code.md  2026-03-06-ai-commit-message-design.md  2026-03-06-ai-commit-message-impl.md  2026-03-07-card-display-mode-design.md  2026-03-07-card-display-mode-impl.md  2026-03-07-cross-platform-migration-design.md  2026-03-07-cross-platform-phase2-phase3.md  2026-03-07-settings-sidebar-outline-design.md  2026-03-07-settings-sidebar-outline-impl.md
docs/sprint-artifacts/: 1-1-initialize-tauri-project.md  1-2-configure-design-system.md  1-3-set-up-sqlite-database.md  1-4-create-app-shell.md  2-3-health-indicators-status.md  2-4-generic-folder-mode.md  2-5-dashboard-grid-layout.md  2-6-project-search-filter.md  2-8-remove-untrack-project.md  2-9-project-auto-detection-on-first-launch.md  3-1-openrouter-api-integration.md  3-2-git-history-analysis.md  3-3-contextpanel-component.md  3-4-ai-context-generation.md  3-5-ai-attribution-display.md  3-7-devlog-analysis-for-ai-context.md  4-1-devlog-editor-component.md  4-2-file-sync-with-repository.md  4-3-devlog-history-view.md  4.25-1-unified-api-client-vercel-sdk.md  4.5-1-agent-core-system-prompt.md  4.5-2-tool-implementation-protocol-execution.md  4.5-3-agent-route-ui.md  4.5-4-agent-execution-integration.md  5-1-git-status-display.md  5-2-one-click-commit.md  5-3-one-click-push-with-guardrails.md  5-6-release-bundle.md  (+19 more)
scripts/: generate-manifest.cjs  start-observer-manual.sh  test-observer-duration.sh  test-observer-socket.sh  test-observer.sh  test-socket-listener.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/sql/: observer_duration_view.sql
src-tauri/src/: db.rs  error.rs  lib.rs  main.rs  security.rs
src-tauri/src/aggregator/: fetchers.rs  mod.rs  patterns.rs  summarizer.rs  types.rs
src-tauri/src/ai/: context.rs  mod.rs  openrouter.rs  provider.rs
src-tauri/src/ai/providers/: demo.rs  mod.rs  openrouter.rs
src-tauri/src/commands/: aggregator.rs  ai.rs  devlog.rs  git.rs  ide.rs  mod.rs  observer.rs  platform.rs  projects.rs  settings.rs  tools.rs
src-tauri/src/context/: devlog.rs  mod.rs
src-tauri/src/observer/: common.rs  mod.rs  settings.rs  types.rs  watcher.rs
src-tauri/src/observer/backends/: mod.rs  observer_wayland.rs  observer_x11.rs
vdocs/: DISTRIBUTION.md  bmm-workflow-status.yaml  implementation-readiness-report-2025-12-18.md  prd.md  ronin-brand-colors.md  ronin-observer-dbus-interface.md  test-design-system.md  ux-design-directions.html
(+281 files in other folders)
