[package]
name = "ronin"
version = "0.1.0-alpha"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ronin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.37.0", features = ["bundled"] }
rusqlite_migration = "2.3.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.31.0"
tauri-plugin-dialog = "2.4.2"
walkdir = "2"
dirs = "5.0"
chrono = "0.4"
git2 = "0.18"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
futures = "0.3"
futures-util = "0.3"
tokio-stream = "0.1"
eventsource-stream = "0.2"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
async-trait = "0.1"
async-stream = "0.3"
machine-uid = "0.5"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"

